# simcharts_aisforwarder

./: .gitignore  LICENSE  README.md  config.yaml  config_schema.yaml  package.xml  setup.cfg  setup.py
AIS_Forwarder/: __init__.py  ais_forwarder.py
AIS_Forwarder/ais_msg/: __init__.py  ais_msg.py
AIS_Forwarder/ais_msg_parser/: __init__.py  ais_msg_parser.py
AIS_Forwarder/api_readers/: __init__.py
AIS_Forwarder/api_readers/norway_barents_watch/: barents_watch_reader.py
AIS_Forwarder/utils/: config.py  logging.py
api_credentials/norway_barents_watch/: info.md
simcharts_aisforwarder/: __init__.py  ais_forwarder.py  ais_publisher.py  ais_subscriber.py  publisher.py  subsriber.py
simcharts_aisforwarder/ais_msg/: __init__.py  ais_msg.py
simcharts_aisforwarder/ais_msg_parser/: __init__.py  ais_msg_parser.py
simcharts_aisforwarder/api_readers/: __init__.py  barents_watch_reader.py
simcharts_aisforwarder/api_readers/norway_barents_watch/: barents_watch_reader.py
simcharts_aisforwarder/nodes/: __init__.py  ais_topic.py
simcharts_aisforwarder/utils/: logging.py  paths.py
src/simcharts_aisforwarder/ais_publisher/: ais_publisher.py
src/simcharts_aisforwarder/utils/: __init__.py  paths.py
