<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simcharts_aisforwarder</name>
  <version>0.0.1</version>
  <description>Reads live AIS data from The Norwegian Coastal Administration "BarentsWatch" API, and publish the information as a ROS 2 topic</description>
  <maintainer email="simon.lexau@ntnu.no">Simon J.N. Lexau</maintainer>
  <license>The MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>simcharts_interfaces</build_depend>
  <exec_depend>simcharts_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>requests</exec_depend>
  <exec_depend>cerberus</exec_depend>
  <exec_depend>PyYaml</exec_depend>
  <exec_depend>astdump</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
